spec/fixtures/source_graph_diagnostics/type_error/dependency.tn
def broken(value : String) : Int32
  value + 1
end
